fixed navigation bug

--- a/StorhaugenWebsite/Pages/BrowseDetails.razor
+++ b/StorhaugenWebsite/Pages/BrowseDetails.razor
@@ -331,7 +331,7 @@ else
                 await CollectionState.AddRecipeToCollectionAsync(selectedCollectionId.Value, created.Id);
             }
 
-            Navigation.NavigateTo($"/food/{created.Id}");
+            Navigation.NavigateTo($"food/{created.Id}");
         }
         catch (Exception ex)
         {
